--- a/index.html
+++ b/index.html
@@ -17,6 +17,30 @@
 
     <h1>Hola mundo</h1>
 
+    <section class="section">
+        <div class="section-center">
+            <div class="grid col-1 md:col-2 lg:col-3">
+                <div class="card">
+                    <h2>Card 1</h2>
+                </div>
+                <div class="card">
+                    <h2>Card 1</h2>
+                </div>
+                <div class="card">
+                    <h2>Card 1</h2>
+                </div>
+                <div class="card">
+                    <h2>Card 1</h2>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="container">
+        <button class="btn">Button 1</button>
+        <button class="btn btn-primary">Button 2</button>
+    </div>
+
+
     <script src="js/app.js"></script>
 
 </body>
