add color primary and padding

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
     <section class="section">
         <div class="section-center">
-            <div class="grid col-1 md:col-2 lg:col-3">
-                <div class="card">
-                    <h2>Card 1</h2>
+            <div class="grid col-1 sm:col-2 md:col-3 lg:col-4">
+                <div class="card bg-primary-500">
+                    <h2 class="bg-primary-900 text-primary-100 pl-4 pr-4 py-4">Card 1</h2>
                 </div>
                 <div class="card">
                     <h2>Card 1</h2>
